--- a/MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Views/Shared/_Layout.cshtml
@@ -47,10 +47,11 @@
                 }
                 else
                 {
-                    <ul class="nav navbar-nav navbar-right">
-                        @*<li>@Html.ActionLink("Register", "Register", "SecurityAccount", routeValues: null, htmlAttributes: new {id = "registerLink"})</li>*@
-                        <li>@Html.ActionLink("Login", "AutoLogin", "Account", routeValues: new{ReturnUrl= "/Home/" }, htmlAttributes: new { id = "loginLink" })</li>
-                    </ul>
+                        <ul class="nav navbar-nav navbar-right">
+                            @*<li>@Html.ActionLink("Register", "Register", "SecurityAccount", routeValues: null, htmlAttributes: new {id = "registerLink"})</li>*@
+                            @*<li>@Html.ActionLink("Login", "AutoLogin", "Account", routeValues: new { ReturnUrl = "/Home/" }, htmlAttributes: new { id = "loginLink" })</li>*@
+                            <li>@Html.ActionLink("Login", "AutoLogin", "Account", routeValues: new {}, htmlAttributes: new { id = "loginLink" })</li>
+                        </ul>
                 }
             </div>
         </div>
